Cabal-tests/tests/ParserTests/errors/spdx-1.cabal
cabal-version:       2.2
name:                spdx
version:             0
synopsis:            testing positive parsing of spdx identifiers
build-type:          Simple
license:             BSD3

library
  default-language: Haskell2010
